try to fix transparent input text only on safari ios mobile

--- a/css/widget.css
+++ b/css/widget.css
@@ -1223,10 +1223,6 @@ html {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   border-radius: var(--rounded-btn, 0.5rem);
-  -webkit-user-select: text; /* rrob Chrome, Opera, Safari */
-  -moz-user-select: text; /* Firefox 2+ */
-  -ms-user-select: text; /* IE 10+ */
-  user-select: text; /* Standard syntax */
 }
 .input-group > .input {
   isolation: isolate;
